tests/ui/feature-gates/feature-gate-rustc_const_unstable.stderr
error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-rustc_const_unstable.rs:3:1
   |
LL | #[rustc_const_unstable(feature="fzzzzzt")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/feature-gate-rustc_const_unstable.rs:3:1
   |
LL | #[rustc_const_unstable(feature="fzzzzzt")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0547, E0658.
For more information about an error, try `rustc --explain E0547`.
